@@ -1,9 +1,9 @@
 .map-container {
 	width: 100%;
-	height: 480px;
+	height: 600px;
 }
 
 #map_canvas {
 	width: 100%;
-	height: 480px;
+	height: 600px;
 }
