@@ -1,3 +1,7 @@
+2012-12-14 - 0.2.2 - Dominic Simm <simm@sub.uni-goettingen.de>
+	* Added getter-functions to province-model for local and global reachable distcentres
+	* Some style changes
+
 2012-12-14 - 0.2.1 - Dominic Simm <simm@sub.uni-goettingen.de>
 	* Added fields 'lat','lng' to city-model
 
